# democrance-api-coding-test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
api/: admin.py  models.py  urls.py
api/migrations/: 0001_initial.py  0002_quote.py  0003_policy_policystatehistory.py  0004_alter_policy_options_and_more.py
api/v1/: forms.py  urls.py  views.py
api/v1/tests/: test_models.py  test_views.py
democrance/: settings.py  urls.py
